# TAT-Platform-Backend

./: .gitignore  Диаграмма без названия.drawio
api-gateway/: .dockerignore  .env.example  Dockerfile  pyproject.toml
api-gateway/api_gateway/: __main__.py  gunicorn_runner.py  logging.py  settings.py
api-gateway/api_gateway/web/: application.py  exceptions.py
gateway/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
gateway/gateway/: __main__.py  gunicorn_runner.py  logging.py  main.py  settings.py
gateway/gateway/web/: application.py  exception_status.py  exceptions.py
gateway/scripts/: entrypoint.sh
tat-tsami-service/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
tat-tsami-service/tat_tsami_service/: schemas.py  services.py
tat-tsami-service/tat_tsami_service/api/: __main__.py  application.py  deps.py  event.py  exceptions.py  setup.py
tat-tsami-service/tat_tsami_service/settings/: main.py
vitacore_service/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
vitacore_service/adapters/db/: providers.py  uow.py
vitacore_service/adapters/http/: providers.py
vitacore_service/adapters/mock/: providers.py
vitacore_service/application/common/: departments_gateway.py  interactor.py  patients_gateway.py  positions_gateway.py  schemas.py  workers_gateway.py
vitacore_service/application/departments/: converter.py  get_departments.py  schemas.py
vitacore_service/application/patients/: converter.py  find_patients.py  get_patient.py  schemas.py
vitacore_service/application/positions/: converter.py  schemas.py
vitacore_service/application/workers/: converter.py  get_workers.py  schemas.py
vitacore_service/domain/exceptions/: base.py  positions.py  vitacore.py
vitacore_service/infra/: config.py  dependencies.py  gunicorn_runner.py  http_app.py  ioc.py
vitacore_service/infra/db/: main.py
vitacore_service/presentation/: interactor_factory.py
(+113 files in other folders)
