[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = ""
authors = ["Andrey Kazackov <AndreyKazackoB@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
pydantic-settings = "^2.1.0"
gunicorn = "^21.2.0"
uvicorn = "^0.27.0.post1"
asyncio = "^3.4.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.26"}
loguru = "^0.7.2"
logging = "^0.4.9.6"
ujson = "^5.9.0"
aiohttp = "^3.9.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
