[tool.poetry]
name = "tat-tsami-service"
version = "0.1.0"
description = ""
authors = ["novichikhin <novichixinn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
aiohttp = "^3.9.3"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
gunicorn = "^21.2.0"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
