[tool.poetry]
name = "vitacore_service"
version = "0.1.0"
description = ""
authors = ["PrinterOMG <PrinterOMG@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
aiohttp = "^3.9.3"
uvicorn = "^0.29.0"
sqlalchemy = {version = "^2.0.29", extras = ["asyncio"]}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
